# indiebase2

./: .env.development  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  docker-compose.yaml  justfile  package.json
.cursor/rules/: backend-tdd-prd.mdc  code-organization.mdc  drizzle-community.mdc  indiebase-core.mdc  openapi-utoipa.mdc  openspec-workflow.mdc  typescript.mdc
.github/: copilot-instructions.md
crates/api/: Cargo.toml
crates/api/assets/: scalar.html
crates/api/migrations/: 20260712000001_platform_tables.sql  20260714000001_data_api_gateway.sql
crates/api/src/: app.rs  assets.rs  config.rs  error.rs  ids.rs  lib.rs  listen_banner.rs  main.rs  openapi.rs  state.rs
crates/api/src/auth/: extractors.rs  mod.rs  password.rs  session.rs
crates/api/src/constants/: auth.rs  data_api.rs  http.rs  keys.rs  mod.rs  session.rs
crates/api/src/data/: auth_matrix.rs  internal_context.rs  jwt.rs  keys.rs  mod.rs  proxy.rs  ulid_path.rs
crates/api/src/db/: gateway_sql.rs  mod.rs  schema.rs  sync.rs
crates/api/src/projects/: keys.rs  mod.rs  postgrest.rs  service.rs
crates/api/src/routes/: auth.rs  data.rs  health.rs  mod.rs  projects.rs
crates/api/tests/: api_docs.rs  auth_and_projects.rs  data_api_gateway.rs
docker/portainer/: docker-compose.yaml
docker/postgrest/: db-schemas  entrypoint.sh  postgrest.conf
docker/redis/: redis.conf
docs/explore/: .tmp-explore-threads-2026-07-03.md
docs/notes/: postgrest-schema-reload.md
docs/prd/: baas-platform-architecture.md  mvp-phases.md  mvp-sdk.md  todo.md
openspec/: config.yaml
openspec/changes/add-openapi-scalar-tdd/: design.md  proposal.md  tasks.md
openspec/changes/app-user-session/: design.md  proposal.md  tasks.md
openspec/changes/app-user-session/specs/api-docs/: spec.md
openspec/changes/app-user-session/specs/app-user-session/: spec.md
openspec/changes/archive/2026-07-12-bootstrap-api/: design.md
openspec/changes/archive/2026-07-12-env-per-environment/: design.md  proposal.md
openspec/changes/archive/2026-07-13-phase-1-platform-auth-project/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-api/: proposal.md  tasks.md
openspec/changes/bootstrap-api/specs/server-bootstrap/: spec.md
openspec/changes/data-api-gateway/: design.md  proposal.md  tasks.md
openspec/changes/data-api-gateway/specs/api-docs/: spec.md
openspec/changes/data-api-gateway/specs/data-api-gateway/: spec.md
openspec/changes/data-api-gateway/specs/env-config/: spec.md
openspec/changes/env-per-environment/: tasks.md
openspec/changes/env-per-environment/specs/env-config/: spec.md
openspec/changes/metadata-table-designer/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-platform-auth-project/: tasks.md
openspec/changes/storage-opendal-fs/: design.md  proposal.md  tasks.md
openspec/changes/ts-sdk/: design.md  proposal.md  tasks.md
openspec/changes/ts-sdk/specs/ts-sdk/: spec.md
openspec/specs/api-docs/: spec.md
openspec/specs/env-config/: spec.md
openspec/specs/platform-auth/: spec.md
openspec/specs/project-lifecycle/: spec.md
openspec/specs/server-bootstrap/: spec.md
(+10 files in other folders)
