[workspace]
members = ["crates/api"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "migrate"] }
sea-query = { version = "1", features = ["backend-postgres", "derive"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
ulid = "1"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
