[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
sqlx.workspace = true
sea-query.workspace = true
redis.workspace = true
ulid.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
base64.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
http-body-util.workspace = true
http.workspace = true
